--- a/python-flask/Dockerfile.save
+++ b/python-flask/Dockerfile.save
@@ -7,7 +7,7 @@
 FROM ubuntu:trusty
 
 # File Author / Maintainer
-MAINTAINER Chris Mahon
+MAINTAINER Maintaner Name
 
 # Add the application resources URL
 RUN echo "deb http://ie.archive.ubuntu.com/ubuntu/ trusty main universe" >> /etc/apt/sources.list
@@ -15,8 +15,7 @@ RUN echo "deb http://ie.archive.ubuntu.com/ubuntu/ trusty main universe" >> /etc
 # Update the sources list
 RUN apt-get update
 
-# Install basic applications
-RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
+# Install basic applicationRUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
 
 # Install Python and Basic Python Tools
 RUN apt-get install -y python python-dev python-distribute python-pip
